[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# uv
[project]
name = "databricks-ddbxutils"
version = "0.5.0"
description = "extends databricks dbutils"
authors = [
    { name = "Haneul Kim", email = "haneul.kim@data-dynamics.io" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.65.0,<1.0.0",
    "dotenv>=0.9.9,<1.0.0",
    "jinja2>=3.1.5,<4.0.0",
    "python-dateutil>=2.9.0.post0,<3.0.0",
    "pyspark>=4.0.0,<5.0.0",
    "pyarrow==20.0.0",
    "cloudpickle>=3.1.1,<4.0.0",
    "pytz>=2026.1.post1",
    "PyYAML==6.0.3",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/ddbxutils",
    "src/io",
    "src/utils",
]
